// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSRadio Base 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-radio"
  >
    <input
      id="radioId1"
      onChange={[Function]}
      onClick={[Function]}
      onKeyPress={[Function]}
      type="radio"
    />
    <label
      className="slds-radio__label"
      htmlFor="radioId1"
    >
      <span
        className="slds-radio_faux"
      />
      <span
        className="slds-form-element__label"
      >
        Radio Label
      </span>
    </label>
  </span>
</div>
`;

exports[`DOM snapshots SLDSRadio Docs site Disabled 1`] = `
<div
  className="slds-p-around_medium"
>
  <span
    className="slds-radio"
  >
    <input
      disabled={true}
      id="radioId2"
      onChange={[Function]}
      onClick={[Function]}
      onKeyPress={[Function]}
      type="radio"
    />
    <label
      className="slds-radio__label"
      htmlFor="radioId2"
    >
      <span
        className="slds-radio_faux"
      />
      <span
        className="slds-form-element__label"
      >
        Radio Label
      </span>
    </label>
  </span>
</div>
`;
